add API support
the environment variable PDNS_API_KEY will be used to determine
wether to activate the PowerDNS HTTP API and use the value as
API key or to keep it deactivated.

--- a/assets/pdns/pdns.conf
+++ b/assets/pdns/pdns.conf
@@ -47,12 +47,12 @@ allow-recursion={{PDNS_ALLOW_RECURSION}}
 #################################
 # api	Enable/disable the REST API
 #
-# api=no
+api={{PDNS_API_ACTIVE}}
 
 #################################
 # api-key	Static pre-shared authentication key for access to the REST API
 #
-# api-key=
+api-key={{PDNS_API_KEY}}
 
 #################################
 # api-logfile	Location of the server logfile (used by the REST API)
@@ -539,12 +539,12 @@ slave={{PDNS_SLAVE}}
 #################################
 # webserver	Start a webserver for monitoring
 #
-# webserver=no
+webserver={{PDNS_API_ACTIVE}}
 
 #################################
 # webserver-address	IP Address of webserver to listen on
 #
-# webserver-address=127.0.0.1
+webserver-address=0.0.0.0
 
 #################################
 # webserver-allow-from	Webserver access is only allowed from these subnets
@@ -554,12 +554,12 @@ slave={{PDNS_SLAVE}}
 #################################
 # webserver-password	Password required for accessing the webserver
 #
-# webserver-password=
+webserver-password={{PDNS_API_KEY}}
 
 #################################
 # webserver-port	Port of webserver to listen on
 #
-# webserver-port=8081
+#webserver-port=8081
 
 #################################
 # webserver-print-arguments	If the webserver should print arguments
